--- a/src/index.css
+++ b/src/index.css
@@ -2,11 +2,11 @@
 
 @font-face {
     font-family: 'logo';
-    src: url(./Autography.otf);
+    src: url(/Autography.otf);
 }
 @font-face {
     font-family: 'base';
-    src: url(./Poppins-Thin.ttf);
+    src: url(/Poppins-Thin.ttf);
 }
 *{
     cursor: pointer;
